--- a/just-cloud/doc/资料收集.md
+++ b/just-cloud/doc/资料收集.md
@@ -1,1 +1,3 @@
 #### 1. nacos 动态添加元数据  https://juejin.cn/post/6987533663613386788
+
+#### 2. sentinel https://www.cnblogs.com/haoxianrui/p/14720405.html#2-%E6%99%AE%E9%80%9A%E6%B5%81%E6%8E%A7%E7%9A%84%E8%A7%84%E5%88%99
